--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -1,5 +1,5 @@
-$main_color: #ff2a00;
-$sub_color: #34313a;
+$main_color: #31364a;
+$sub_color: #76838f;
 $main_border_color: #ddd;
 
 $topbar_height: 60px;
