--- a/src/styles/edit.scss
+++ b/src/styles/edit.scss
@@ -18,10 +18,22 @@ body {
 }
 
 .workspace {
-  width: $view_width;
-  height: $view_height;
+  position: relative;
+  width: $view_width + 8px;
+  height: $view_height + 74px;
   margin: 0 auto;
-  background-color: #fff;
+  background-image: url(../assets/phonewhite-7a04c3.svg);
+  background-repeat: no-repeat;
+  box-shadow: 0 2px 8px rgba(0,0,0,.15);
+  border-radius: 40px;
+  > .wrap {
+    position: absolute;
+    top: 37px;
+    left: 4px;
+    width: $view_width;
+    height: $view_height;
+    background-color: #fff
+  }
 }
 .panel-header {
   color: #fff;
@@ -73,5 +85,13 @@ body {
       font-size: 22px;
       cursor: pointer;
     }
+  }
+}
+// 顶部工具栏
+.header-ctn {
+  overflow: hidden;
+  > .actions {
+    float: right;
+    margin-top: 10px;
   }
 }
