- 改：数据生成list和tree - 改：根据对象引用同步修改 - 待更新数据设置同步ui变化问题

--- a/src/styles/edit.scss
+++ b/src/styles/edit.scss
@@ -16,6 +16,16 @@ body {
 .h-full {
   height: 100%;
 }
+.h-from {
+  .item {
+    margin: 5px;
+  }
+}
+.h-input {
+  padding: 5px 10px;
+  border: 1px solid #ddd;
+  line-height: 1; 
+}
 
 .workspace {
   position: relative;
