--- a/src/styles/edit.scss
+++ b/src/styles/edit.scss
@@ -51,15 +51,16 @@ body {
 }
 // 模板列表
 .tpl-lists {
+  float: left;
+  width: 600px;
   height: 100%;
+  margin: 10px auto;
   .item {
     float: left;
-    width: 50px;
-    height: 50px;
-    margin: 5px;
+    padding: 10px 30px;
     border: 1px solid #dedede;
+    color: #fff;
     text-align: center;
-    line-height: 50px;
     cursor: pointer;
   }
 }
