--- a/src/styles/edit.scss
+++ b/src/styles/edit.scss
@@ -1,10 +1,10 @@
 @import "./modules/props.scss";
 
-.workspace {
+// 展示编辑区域
+.m-simulator {
   position: relative;
   width: $view_width + 8px;
   height: $view_height + 74px;
-  margin: 0 auto;
   background-image: url(../assets/phonewhite-7a04c3.svg);
   background-repeat: no-repeat;
   box-shadow: 0 2px 8px rgba(0,0,0,.15);
@@ -18,6 +18,24 @@
     background-color: #fff
   }
 }
+
+// preview
+#preview {
+  @include middle-center;
+  .comp {
+    position: absolute !important;
+  }
+}
+
+// workspace
+#workspace {
+  position: relative;
+}
+.work-part {
+  @include middle-center
+}
+
+
 .panel-header {
   color: #fff;
   line-height: 40px;
