--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,4 +1,5 @@
 .g-hd {
+  min-height: 60px;
   > .g-wrap {
     margin-top: 1vh;
   }
@@ -10,7 +11,7 @@
   @include grail-layout(200px, 200px)
   .actions {
     text-align: center;
-    margin-top: 10px;
+    margin-top: 7px;
   }
 }
 // 模板列表
