--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -23,3 +23,10 @@
     margin-left: -$right;
   }
 }
+
+@mixin middle-center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%)
+}
