--- a/src/styles/ui.scss
+++ b/src/styles/ui.scss
@@ -12,4 +12,6 @@
 @import "./page.scss";
 
 // components
-@import "./components/image.scss"
+@import "./components/image.scss";
+
+@import "./function-components.scss";
