--- a/src/styles/ui.scss
+++ b/src/styles/ui.scss
@@ -14,4 +14,5 @@
 // components
 @import "./components/image.scss";
 
-@import "./function-components.scss";
+// modules
+@import "./modules/index.scss";
