添加简单动画

--- a/src/styles/edit.scss
+++ b/src/styles/edit.scss
@@ -17,6 +17,14 @@
   }
 }
 
+.m-animations {
+  > li {
+    float: left;
+    width: 50%;
+    margin: 10px 0;
+  }
+}
+
 #view {
   height: 100%;
 }
