--- a/src/styles/modules/pick-img.scss
+++ b/src/styles/modules/pick-img.scss
@@ -23,6 +23,7 @@
         max-width: 100%;
         max-height: 119px;
         display: inline-block;
+        vertical-align: middle;
       }
       i {
         position: absolute;
