--- a/src/styles/modules/index.scss
+++ b/src/styles/modules/index.scss
@@ -1,3 +1,4 @@
 @import "./modules/props.scss";
 @import "./modules/pick-img.scss";
+@import "./modules/pick-bgm.scss";
 @import "./modules/function-components.scss";
