add mobile listener

--- a/src/assets/styles/edit.scss
+++ b/src/assets/styles/edit.scss
@@ -3,7 +3,7 @@
   position: relative;
   width: $view_width + 8px;
   height: $view_height + 74px;
-  background-image: url(../assets/phonewhite-7a04c3.svg);
+  background-image: url(../phonewhite-7a04c3.svg);
   background-repeat: no-repeat;
   box-shadow: 0 2px 8px rgba(0,0,0,.15);
   border-radius: 40px;
