--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -98,3 +98,22 @@ body {
     animation: rotating 1.2s linear infinite;
   }
 }
+
+.swiper-container {
+  height: 100%;
+  .swiper-slide {
+    overflow: hidden
+  }
+}
+
+.container, .comp-lists {
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+.comp {
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
